<resources>
    <string name="app_name">Operation Sunlight</string>
    <string name="title_activity_navigation">Operation Sunlight</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_plant">Plant Catalogue</string>
    <string name="menu_weather">Weather Forecast</string>
    <string name="menu_plant_bio">Plant Bio</string>
    <string name="menu_garden">Garden</string>
    <string name="menu_greenhouse">Greenhouse</string>
    <string name="menu_note">Notes</string>
    <string name="sort_by_ascending">Sort By: Ascending</string>
    <string name="sort_by_descending">Sort By: Descending</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trefle_disclaimer">Data Brought to You By <a href="https://trefle.io/">Trefle</a></string>
    <string name="menu_greenhouse_controller">Controller</string>
    <string name="menu_greenhouse_view">View</string>
    <string name="menu_bluetooth">Arduino Controller</string>
    <string name="menu_device_selection">Bluetooth Device Selector</string>
    <string name="menu_device_selection_view">Bluetooth Device Selector</string>
    <string name="menu_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>

    <string-array name="themes">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Pink</item>
    </string-array>

</resources>