<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/menu_note" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_menu_weather"
            android:title="@string/menu_weather" />
        <item
            android:id="@+id/nav_plant"
            android:icon="@drawable/ic_menu_plant"
            android:title="@string/menu_plant" />
        <item
            android:id="@+id/nav_garden"
            android:icon="@drawable/ic_menu_garden"
            android:title="@string/menu_garden" />
        <item
            android:title="@string/menu_greenhouse">
            <menu>
                <item
                    android:id="@+id/nav_greenhouse_controller"
                    android:icon="@drawable/ic_menu_greenhouse_controller"
                    android:title="@string/menu_greenhouse_controller"/>
                <item
                    android:id="@+id/nav_greenhouse_view"
                    android:icon="@drawable/ic_menu_greenhouse_view"
                    android:title="@string/menu_greenhouse_view"/>
            </menu>
        </item>
    </group>
</menu>