<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.operationsunlight.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_plant"
        android:name="com.example.operationsunlight.ui.plant.PlantFragment"
        android:label="@string/menu_plant"
        tools:layout="@layout/fragment_plant" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="com.example.operationsunlight.ui.weather.WeatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/nav_garden"
        android:name="com.example.operationsunlight.ui.garden.GardenFragment"
        android:label="@string/menu_garden"
        tools:layout="@layout/fragment_garden" />

    <fragment
        android:id="@+id/nav_plant_bio"
        android:name="com.example.operationsunlight.ui.plant.PlantBioFragment"
        android:label="@string/menu_plant_bio"
        tools:layout="@layout/fragment_plant_bio" />

    <fragment
        android:id="@+id/nav_greenhouse"
        android:name="com.example.operationsunlight.ui.greenhouse.GreenhouseFragment"
        android:label="@string/menu_greenhouse"
        tools:layout="@layout/fragment_greenhouse" />

    <fragment
        android:id="@+id/nav_note"
        android:name="com.example.operationsunlight.ui.note.NoteFragment"
        android:label="@string/menu_note"
        tools:layout="@layout/fragment_note" />
</navigation>